syntax = "proto3";

option java_multiple_files = true;
package com.example.grpc;

service UserService {
  rpc GetUserDetails (UserRequest) returns (UserResponse);
}

message UserRequest {
  string userId = 1;
}

message UserResponse {
  string name = 1;
  int32 age = 2;
  string email = 3;
}
